--- a/src/main/resources/templates/auditManager/index.html
+++ b/src/main/resources/templates/auditManager/index.html
@@ -137,7 +137,7 @@
 						<li><a href="notifications" onclick="addTab('审计机构管理','auditormanage')"><i class="lnr lnr-alarm"></i> <span>审计机构管理</span></a></li>
 						<li><a href="notifications" onclick="addTab('流程定义','processdefine')"><i class="lnr lnr-alarm"></i> <span>流程定义</span></a></li>
 						<li><a href="notifications" onclick="addTab('审计知识库管理','auditlib')"><i class="lnr lnr-alarm"></i> <span>审计知识库管理</span></a></li>
-						<li><a href="notifications" onclick="addTab('工作日志','worklog')"><i class="lnr lnr-alarm"></i> <span>工作日志</span></a></li>
+						<li><a href="notifications" onclick="addTab('操作日志','oplog')"><i class="lnr lnr-alarm"></i> <span>操作日志</span></a></li>
 					</ul>
 				</nav>
 			</div>
