--- a/src/main/resources/templates/initialRoles/propertySet.html
+++ b/src/main/resources/templates/initialRoles/propertySet.html
@@ -12,6 +12,8 @@
     a{text-decoration: none}
 </style>
 
+
+<body>
 <script>
     function OpenDiv(){
         document.getElementById("div1").style.display="block";
@@ -22,84 +24,152 @@
     }
 
     function addDialog1() {
-        $("#wi").window('open');
+        var w=$("#pro").datagrid('getSelected');
+        if(w){
+            $("#edit").window('open');
+            $("#pro_form").form('load',w);
+        }else{
+            $.messager.alert("系统提示","请选择一行");
+        }
     }
+
 
     function ayo() {
         $.messager.confirm('提示','确认删除吗?',function (r) {
-            if(r){
-                alert('想跳哪去自己写');
-            }
-        });
-    }
-    function EditUser() {
-        $('#fm').form('submit', {
-            url: "ajax/UserMAjax.ashx?cmd=edit&userid=" + userid,
-            success: function (data) {
-                var data = eval('(' + data + ')');  // change the JSON string to javascript object
-                if (data.rbool) {
-                    window.location.reload();
+            var row=$("#pro").datagrid('getSelected');
+            if (row) {
+                if (r) {
+                    $.ajax({
+                        url: 'delpro?aId=' + row.aId,
+                        type: 'get',
+                        success: function (data) {
+                            if (data > 0) {
+                                $("#pro").datagrid('reload');
+                                $.messager.alert("系统提示", "删除成功");
+                            } else {
+                                $.messager.alert("系统提示", "删除失败");
+                            }
+                        }
+                    })
                 }
-                else {
-                    $.messager.alert('提示', data.infor);
-                }
+            }else{
+                $.messager.alert("系统提示","请选择一行");
             }
         });
     }
 
+
+    $(function () {
+        $("#mo").datagrid({
+            onSelect:function (rowIndex,rowData) {
+                $.ajax({
+                    url:'modelid?modelId='+rowData.modelId,
+                    type:'get',
+                    success:function (data) {
+                        $("#pro").datagrid('loadData',data);
+                    }
+                });
+            }
+        });
+
+
+        $("#addcli").click(function () {
+            var aname=$("#aname").val();
+            var row=$("#mo").datagrid('getSelected');
+            if(row) {
+                $.ajax({
+                    url: 'modeladdpro?aName=' + aname + '&modelId=' + row.modelId,
+                    type: 'get',
+                    success: function (data) {
+                        if (data > 0) {
+                            $.messager.alert("系统提示", "新增属性成功");
+                        } else {
+                            $.messager.alert("系统提示", "新增属性失败");
+                        }
+                    }
+                });
+            }else{
+                $.messager.alert("系统提示","请选择一行");
+            }
+        })
+
+
+
+        $("#editp").click(function () {
+            var aJurisdiction=$("#aJurisdiction").val();
+            var aType=$("#aType").val();
+            var t=$("#pro").datagrid('getSelected');
+            if(t) {
+                $.ajax({
+                    url: 'editpro?aId=' + t.aId + '&aType=' + aType + '&aJurisdiction' + aJurisdiction,
+                    type: 'get',
+                    success: function (data) {
+                        if (data > 0) {
+                            alert(data)
+                            $.messager.alert("系统提示", "修改成功");
+                        } else {
+                            $.messager.alert("系统提示", "修改失败");
+                        }
+                    }
+                })
+            }else{
+                $.messager.alert("系统提示","请选择一行");
+            }
+        })
+    })
+
 </script>
-<body>
-<div class="easyui-layout" style="width: 100%;height:800px;">
+<div class="easyui-layout" style="width: 100%;height:640px;">
     <div data-options="region:'west',title:'属性设置',split:true" style="width:230px;" >
-        <div style="width: 100%;height:30px;background: rgba(0, 0, 255, 0.1)">
-        </div>
+        <table id="mo" class="easyui-datagrid"  style="width:100%;height:607px;"
+        data-options="url:'models',singleSelect:true">
+            <thead>
+                <th data-options="field:'modelName',width:218"></th>
+            </thead>
+        </table>
     </div>
-    <div data-options="region:'center'" style="padding:5px;">
-        <div style="width: 100%;">
+    <div data-options="region:'center'" style="width: 640px">
             <div id="d" style="background: rgba(0, 0, 255, 0.1)">
-                <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:addDialog()">增加</a>
-                <a href="#" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:ayo()">删除</a>
-                <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="javascript:addDialog1()">编辑</a>
-                <a href="#" class="easyui-linkbutton" iconCls="icon-reload" plain="true" onclick="javascript:addDialog1()">刷新</a>
+                <a href="javascript:void(0);" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:addDialog()">增加</a>
+                <a href="javascript:void(0);" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:ayo()">删除</a>
+                <a href="javascript:void(0);" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="javascript:addDialog1()">编辑</a>
+                <a href="javascript:void(0);" class="easyui-linkbutton" iconCls="icon-reload" plain="true" onclick="javascript:addDialog1()">刷新</a>
             </div>
-        </div>
-        <div style="width: 100%;">
-            <table class="easyui-datagrid" pagination="true" rownumbers="true" style="width:95%;height:720px;">
+            <table id="pro" class="easyui-datagrid" pagination="true" style="width:100%;height:607px;">
                 <thead>
                 <tr>
                     <th field="ck" checkbox="true"></th>
-                    <th field="itemid" width="180">属性名称</th>
-                    <th field="productid" width="180">属性类型</th>
-                    <th field="listprice" width="180" align="right">是否权限</th>
-                    <th field="listprice" width="180" align="right">是否多选</th>
+                    <th field="aName" width="25%">属性名称</th>
+                    <th field="aType" width="25%">属性类型</th>
+                    <th field="aJurisdiction" width="25%">是否权限</th>
+                    <th field="a" width="24%" >是否多选</th>
                 </tr>
                 </thead>
             </table>
-        </div>
         <div id="win" class="easyui-dialog" style="width:400px;padding: 20px;"
              iconCls="icon-add" data-options="title:'增加',modal:true,closed:true">
-            <form id="" method="post" novalidate>
+            <form id="addpro" method="post" novalidate>
                 <div style="margin-bottom:10px">
-                    <input class="easyui-combo" label="属性名称:" required="true" style="width:100%" ></input>
+                    <input class="easyui-textbox" id="aname" label="属性名称:" required="true" style="width:100%" ></input>
                 </div>
                 <div style="text-align:right">
-                    <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                    <input id="addcli" class="easyui-linkbutton" type="submit" value="保存"  style="width:80px;height:30px">
                     <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
                 </div>
 
             </form>
         </div>
-        <div id="wi" class="easyui-dialog" style="width:400px;padding: 20px;"
+        <div id="edit" class="easyui-dialog" style="width:400px;padding: 20px;"
              iconCls="icon-edit" data-options="title:'编写',modal:true,closed:true">
-            <form  method="post" novalidate>
+            <form id="pro_form"  method="post" novalidate>
                 <div style="margin-bottom:10px">
-                    <input class="easyui-textbox" label="属性类型:"  required="true" validType="email" style="width:100%"></input>
+                    <input class="easyui-textbox" id="aType" name="aType" label="属性类型:"  required="true" validType="email" style="width:100%"></input>
                 </div>
                 <div style="margin-bottom:10px">
-                    <input class="easyui-combo" label="是否权限:" required="true" style="width:100%"></input>
+                    <input class="easyui-textbox" id="aJurisdiction" name="aJurisdiction" label="是否权限:" required="true" style="width:100%"></input>
                 </div>
                 <div style="text-align:right">
-                    <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                    <input class="easyui-linkbutton" id="editp" type="submit" value="保存" onclick="edit()" style="width:80px;height:30px">
                     <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
                 </div>
 
